tests/fixtures/effect-compiler/errors/EFX2211.effect
CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
}%

CCProgram vs %{
  precision mediump float;
  struct MyData { vec4 v; }
  uniform Test {
    MyData testStruct;
  }
  vec4 test () {}
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {}
}%
